--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "5000:5000"
     restart: unless-stopped
     env_file:
-      - ./backend/.env   # lê o .env criado pelo setup_env.py
+      - ./backend/.env
     environment:
       - PYTHONUNBUFFERED=1
     networks:
